--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/eunchurn/tm21-rpi3-application#readme",
   "dependencies": {
     "binary-parser": "^1.4.0",
+    "buffer-compare": "^1.1.1",
     "cbor-sync": "^1.0.4",
     "chalk": "^2.4.2",
     "dotenv": "^8.1.0",
