--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
   },
   "scripts": {
     "start": "nodemon --exec babel-node ./index.js",
-    "forever:start": "forever --killTree start -a -l app.log -c node_modules/.bin/babel-node ./index.js",
+    "lint": "eslint .",
+    "test": "jest",
+    "coverage": "npm test -- --coverage",
+    "postcoverage": "open-cli coverage/lcov-report/index.html",
+    "clean": "rimraf dist",
+    "flow": "flow check",
+    "flowbuild": "flow-copy-source src dist",
+    "prebuild": "npm run clean && npm run flowbuild",
+    "build": "babel src -d dist",
+    "prerelease": "npm run lint && npm test && npm run build",
+    "release": "standard-version",
+    "postpublish": "git push origin master --follow-tags",
+    "tree": "tree -a -I 'node_modules|.git'",
+    "forever:start": "forever --killTree start -a -l app.log -c /usr/bin/node ./dist/index.js",
     "forever:stop": "forever stopall > /dev/null",
     "forever:list": "forever list",
     "log": "tail -f ~/.forever/app.log",
@@ -25,12 +38,27 @@
     "Monitoring",
     "Node"
   ],
+  "files": [
+    "dist",
+    "src"
+  ],
   "author": "Eunchurn Park (eunchurn.park@gmail.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/eunchurn/tm21-rpi3-application/issues"
   },
   "homepage": "https://github.com/eunchurn/tm21-rpi3-application#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "binary-parser": "^1.4.0",
     "buffer-compare": "^1.1.1",
@@ -42,31 +70,35 @@
     "redis": "^2.8.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.6.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "documentation": "^12.1.3",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-flowtype-errors": "^4.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "flow-bin": "^0.111.3",
+    "flow-copy-source": "^2.0.8",
     "forever-fixed": "^0.16.1",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
     "nodemon": "^1.19.2",
-    "shelljs": "^0.8.3"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ],
-    "plugins": [
-      [
-        "module-resolver",
-        {
-          "root": [
-            "./"
-          ],
-          "alias": {
-            "@src": "./src",
-            "@libs": "./libs"
-          }
-        }
-      ]
-    ]
+    "open-cli": "^5.0.0",
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "shelljs": "^0.8.3",
+    "standard-version": "^7.0.0"
   }
 }
