--- a/package.json
+++ b/package.json
@@ -9,24 +9,21 @@
   "scripts": {
     "prestart": "yarn build",
     "start": "node ./dist/index.js",
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts",
     "lint": "eslint .",
     "test": "jest",
     "coverage": "yarn test -- --coverage",
     "postcoverage": "open-cli coverage/lcov-report/index.html",
     "clean": "rimraf dist",
-    "flow": "flow check",
-    "flowbuild": "flow-copy-source src dist",
-    "prebuild": "yarn clean && yarn flowbuild",
-    "build": "babel src -d dist",
+    "prebuild": "yarn clean",
+    "build": "tsc",
+    "typecheck": "tsc --noEmit",
     "prerelease": "yarn lint && npm test && yarn build",
     "release": "standard-version",
     "postpublish": "git push origin master --follow-tags",
     "tree": "tree -a -I 'node_modules|.git'",
-    "forever:start": "forever --killTree start -a -l app.log -c /usr/bin/node ./dist/index.js",
-    "forever:stop": "forever stopall > /dev/null",
-    "forever:list": "forever list",
     "log": "tail -f ~/.forever/app.log",
-    "restart": "yarn forever:stop && yarn forever:start"
+    "stacktest": "ts-node-dev --respawn ./src/libs/stackTesting.ts"
   },
   "repository": {
     "type": "git",
@@ -63,47 +60,48 @@
   "jest": {
     "collectCoverage": true
   },
+  "_moduleAliases": {
+    "@src": "dist",
+    "@libs": "dist/libs"
+  },
   "dependencies": {
-    "binary-parser": "^1.4.0",
+    "binary-parser": "^1.7.0",
     "buffer-compare": "^1.1.1",
     "cbor-sync": "^1.0.4",
-    "chalk": "^3.0.0",
-    "dotenv": "^8.1.0",
-    "mqtt": "^3.0.0",
+    "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
+    "module-alias": "^2.2.2",
+    "mqtt": "^4.2.5",
     "raw-socket": "^1.7.0",
-    "redis": "^2.8.0"
+    "redis": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "documentation": "^12.1.3",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.5.0",
+    "@types/binary-parser": "^1.5.0",
+    "@types/buffer-compare": "^0.0.30",
+    "@types/jest": "^26.0.15",
+    "@types/redis": "^2.8.28",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "documentation": "^13.1.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-flowtype": "^4.3.0",
-    "eslint-plugin-flowtype-errors": "^4.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "flow-bin": "^0.115.0",
-    "flow-copy-source": "^2.0.8",
-    "forever-fixed": "^0.16.1",
-    "husky": "^4.0.2",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
-    "nodemon": "^2.0.0",
-    "open-cli": "^5.0.0",
-    "prettier": "^1.18.2",
-    "rimraf": "^3.0.0",
-    "shelljs": "^0.8.3",
-    "standard-version": "^7.0.0",
-    "yarn": "^1.19.1"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "nodemon": "^2.0.6",
+    "open-cli": "^6.0.1",
+    "prettier": "^2.2.0",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
+    "standard-version": "^9.0.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.1.2",
+    "yarn": "^1.22.10"
   }
 }
