--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts",
     "lint": "eslint .",
-    "test": "jest",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "coverage": "yarn test -- --coverage",
     "postcoverage": "open-cli coverage/lcov-report/index.html",
     "clean": "rimraf dist",
