--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "doc": "doc"
   },
   "scripts": {
-    "prestart": "yarn build",
+    "prestart": "npm run build",
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts",
     "lint": "eslint .",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "coverage": "yarn test -- --coverage",
+    "coverage": "npm test -- --coverage",
     "postcoverage": "open-cli coverage/lcov-report/index.html",
     "clean": "rimraf dist",
-    "prebuild": "yarn clean",
+    "prebuild": "npm run clean",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "prerelease": "yarn lint && npm test && yarn build",
+    "prerelease": "npm run lint && npm test && npm run build",
     "release": "standard-version",
     "postpublish": "git push origin master --follow-tags",
     "tree": "tree -a -I 'node_modules|.git'",
@@ -71,7 +71,6 @@
     "dotenv": "^8.2.0",
     "module-alias": "^2.2.2",
     "mqtt": "^4.2.6",
-    "raw-socket": "^1.7.0",
     "redis": "^3.0.2"
   },
   "devDependencies": {
@@ -91,16 +90,13 @@
     "husky": "4.3.6",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
-    "nodemon": "2.0.6",
-    "open-cli": "6.0.1",
+    "open-cli": "^6.0.1",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "shelljs": "0.8.4",
     "standard-version": "9.0.0",
     "ts-jest": "26.4.4",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.1",
-    "typescript": "4.1.3",
-    "yarn": "1.22.10"
+    "typescript": "4.1.3"
   }
 }
